--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -8,10 +8,8 @@
 
 .filter-links {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
         align-items: center;
     gap: 10px;
     margin-bottom: 40px;
@@ -177,15 +175,15 @@
 }
 
 .price-form {
-    display: inline;
     font-family: inherit;
     color: #5e5a594d;
     margin: 0;
     background-color: #F2F2F2;
-    padding: 9px 19px 11px;
+    padding: 11px 20px;
 }
 
 .price-form-field {
+    display: inline;
     border: none;
     color: #000000;
     font-family: inherit;
@@ -195,6 +193,7 @@
     line-height: 24px;
     outline: 0;
     outline-offset: 0;
+    width: 75px;
 }
 
 .price-form-name {
@@ -215,13 +214,11 @@
 }
 
 .price-form-one {
-    display: inline-block;
     border-radius: 4px 0 0 4px;
-    margin-right: 2px;
+    margin-right: 3px;
 }
 
 .price-form-two {
-    display: inline-block;
     border-radius: 0 4px 4px 0;
 }
 
@@ -233,6 +230,10 @@
 }
 
 /* RANGE */
+.range-wrapper {
+    display: inline;
+}
+
 .range-scale {
     display: block;
     margin-top: 55px;
@@ -273,11 +274,6 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-    -moz-appearance:textfield;
 }
 
 /* PRICE FORM END */
@@ -392,7 +388,6 @@ input[type=number] {
 .hotels-list,
 .pagination {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     list-style: none;
 }
@@ -425,10 +420,8 @@ input[type=number] {
 
 .hotels-list {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     padding: 0;
     margin: 0;
     gap: 20px;
@@ -507,13 +500,8 @@ input[type=number] {
 }
 
 .hotel-about:hover {
-    -webkit-transition: -webkit-transform ease-in-out 0.3s;
     transition: -webkit-transform ease-in-out 0.3s;
-    transition: transform ease-in-out 0.3s;
-    transition: transform ease-in-out 0.3s, -webkit-transform ease-in-out 0.3s;
-    -webkit-transform: scale(0.95);
-        -ms-transform: scale(0.95);
-            transform: scale(0.95);
+    transform: scale(0.95);
 }
 
 .hotel-about:active, .hotel-item-h3:active {
@@ -590,8 +578,6 @@ input[type=number] {
 
 .light-line {
     border: 1px solid #E6E6E6;
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
     transform: rotate(180deg);
     margin-bottom: 40px;
 }
