--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -1,9 +1,10 @@
 .filter {
     background-image: url("../img/images/catalog-filter.jpg");
-    height: 412px;
-    padding: 35px 70px 70px 70px;
+    min-height: 412px;
+    background-repeat: no-repeat;
+    padding: 38px 70px 70px 70px;
     color: #FFFFFF;
-    margin-bottom: 50px;
+    margin-bottom: 37px;
 }
 
 .filter-links {
@@ -12,7 +13,7 @@
     -webkit-box-align: center;
         align-items: center;
     gap: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 38px;
 }
 
 .filter h1 {
@@ -24,16 +25,29 @@
     margin-bottom: 8px;
 }
 
-.filter-home-page,
 .filter-hotel-link {
     text-decoration: none;
+    display: flex;
+    gap: 11px;
+}
+
+.filter-home-page {
+    margin-top: 5px;
+}
+
+.filter-hotel-link:not(:last-child)::after {
+    content: "";
+    width: 6px;
+    height: 11px;
+    background-image: url('../img/icons/breadcrumbs.svg');
+    background-repeat: no-repeat;
+    background-position: center -5px;
 }
 
 .filter-hotel-link {
     color: #FFFFFF;
     font-weight: 400;
     font-size: 16px;
-    line-height: 21px;
 }
 
 .filter-hotel-link:hover {
@@ -66,7 +80,7 @@
 }
 
 .filter-form-name{
-    padding: 0 0 32px 0;
+    padding: 0 0 33px 0;
     margin: 0;
 }
 
@@ -104,9 +118,6 @@
     background-color: #FFFFFF;
 }
 
-
-/* как лучше написать .checkbox-container:active .checkbox-real ~ .checkbox-style
-или .checkbox-style:active */
 .checkbox-container:focus .checkbox-real ~ .checkbox-style {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
     border: 1.50px solid #83B3D3;
@@ -130,7 +141,7 @@
     background-image: url("../img/icons/tick.svg");
     width: 12px;
     height: 10px;
-    margin: 5px 0 0 5px;
+    margin: 5px 0 0 4px;
 }
 
 .radio-style {
@@ -351,8 +362,6 @@ input::-webkit-inner-spin-button {
     margin-right: 200px;
 }
 
-
-/* rewrite */
 .select-container {
     position: relative;
     display: flex;
@@ -361,14 +370,12 @@ input::-webkit-inner-spin-button {
     height: 49px;
 }
 
-  /* Control */
 .select-control {
     width: 100%;
     padding: 14px 20px;
     margin-right: 107px;
     font: inherit;
     color: #333333;
-    font-weight: 400;
     font-size: 18px;
     line-height: 21px;
     background-color: #ffffff;
@@ -380,7 +387,6 @@ input::-webkit-inner-spin-button {
     appearance: none;
     cursor: pointer;
 }
-/* rewrite */
 
 .layout-list,
 .hotels-list,
@@ -476,6 +482,8 @@ input::-webkit-inner-spin-button {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
+    transition: -webkit-transform ease-in-out 0.3s;
+    transform: scale(1);
 }
 
 .hotel-item a {
