--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -47,9 +47,14 @@ body {
     font-weight: 400;
     font-size: 22px;
     line-height: 1.2em;
-    color: #333333;
+    color: #333;
     background-color: #F2F2F2;
     min-width: 1280px;
+}
+
+img {
+    max-width: 100%;
+    object-fit: contain;
 }
 
 .main {
@@ -63,17 +68,18 @@ body {
     flex-direction: column;
     min-height: 100%;
     margin: 0 auto;
-    background-color: #FFFFFF;
+    background-color: #FFF;
     width: 1200px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgb(0 0 0 / 20%);
 }
 
 /* HEADER */
 
 .main-header {
+    position: relative;
     align-content: center;
     padding: 0 70px;
-    height: 64px;
+    min-height: 62px;
 }
 
 .all-navigation {
@@ -89,7 +95,14 @@ body {
     display: -webkit-box;
     display: flex;
     margin: 0;
+    margin-left: 168px;
     padding: 0;
+}
+
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    width: 700px;
 }
 
 .navigation-link {
@@ -105,12 +118,11 @@ body {
 
 .navigation-item {
     padding: 0 16px;
+    height: 62px;
 }
 
 .logo {
-    margin-right: 29px;
-    padding: 0;
-    z-index: 1;
+    position: absolute;
 }
 
 .current-link {
@@ -129,16 +141,17 @@ body {
 .button-nav-list {
     display: -webkit-box;
     display: flex;
+    position: absolute;
     align-items: center;
-    height: 67px;
-    margin-left: 285px;
+    height: 62px;
+    right: 70px;
 }
 
 .button-search,
 .button-like {
-    padding: 22px 12px 19px;
-    border: #FFFFFF;
-    background-color: #FFFFFF;
+    padding: 21px 12px 17px;
+    border: #FFF;
+    background-color: #FFF;
     cursor: pointer;
 }
 
@@ -167,7 +180,7 @@ body {
     font-size: 10px;
     line-height: 10px;
     text-align: center;
-    color: #FFFFFF;
+    color: #FFF;
 }
 
 .button-want {
@@ -184,8 +197,7 @@ body {
 /* SUBSCRIBE section */
 
 .subscribe {
-    width: 684px;
-    height: 215px;
+    min-height: 215px;
     padding: 96px 258px 104px;
 }
 
@@ -201,7 +213,7 @@ body {
 
 .subscribe p {
     margin: 0 auto 54px;
-    color: #FFFFFF;
+    color: #FFF;
     text-align: center;
     font-weight: 400;
 }
@@ -209,6 +221,7 @@ body {
 .subscribe-form {
     display: -webkit-box;
     display: flex;
+    justify-content: center;
 }
 
 .subscribe-email {
@@ -216,7 +229,7 @@ body {
     background-color: #F2F2F2;
     border-radius: 4px 0 0 4px;
     width: 452px;
-    height: 50px;
+    min-height: 52px;
     border: none;
     padding-left: 20px;
     font-weight: 400;
@@ -253,17 +266,18 @@ body {
     display: -webkit-box;
     display: flex;
     width: 1060px;
-    height: 50px;
-    margin: 40px 70px 30px;
+    min-height: 50px;
+    margin: 36px 70px 30px;
+    position: relative;
 }
 
 .social-list {
     display: -webkit-box;
     display: flex;
+    position: absolute;
     list-style: none;
     padding: 0;
     margin: 5px 0;
-    margin-right: 235px;
     align-items: center;
 }
 
@@ -272,7 +286,8 @@ body {
     padding: 12px 13px;
 }
 
-.social-item path:hover {
+.social-item path:hover,
+.social-item path:focus {
     fill: #68A2CA;
 }
 
@@ -286,19 +301,17 @@ body {
     color: #000;
     font-weight: 400;
     font-size: 40px;
-    line-height: 1em;
-    width: 331px;
-    height: 40px;
+    line-height: 40px;
+    margin-left: 25px;
 }
 
 .phone {
-    text-align: center;
-    width: 331px;
-    height: 40px;
-    margin-right: 235px;
+    margin: 8px auto 0;
+    max-width: 360px;
 }
 
-.phone a:hover {
+.phone a:hover,
+.phone a:focus {
     color: #756157;
 }
 
@@ -308,9 +321,12 @@ body {
 
 .htmlacademy {
     padding: 9px 0;
+    position: absolute;
+    right: 0;
 }
 
-.htmlacademy:hover path {
+.htmlacademy:hover path,
+.htmlacademy:focus path {
     fill: #756157;
 }
 
@@ -324,7 +340,7 @@ body {
 /* BROWN BUTTON */
 .button-brown {
     background-color: #756157;
-    color: #FFFFFF;
+    color: #FFF;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -338,17 +354,20 @@ body {
     color: #FFFFFF4D;
 }
 
-.button-brown:disabled,
-.button-blue:disabled {
+.button-brown:disabled {
     background: #E5E5E5;
 }
 
 /* BLUE BUTTON */
 .button-blue {
     background-color: #82B3D3;
-    color: #FFFFFF;
+    color: #FFF;
     cursor: pointer;
     transition: background-color 0.3s;
+}
+
+.button-blue:disabled {
+    background: #E5E5E5;
 }
 
 .button-blue:hover:not(.pagination-current, .pagination-etc),
@@ -379,8 +398,8 @@ body {
 .modal {
     position: relative;
     margin: auto;
-    background-color: #FFFFFF;
-    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+    background-color: #FFF;
+    box-shadow: 0 25px 50px rgb(0 0 0 / 15%);
     border-radius: 30px;
     padding: 63px 67px 65px 72px;
     width: 717px;
@@ -392,8 +411,8 @@ body {
     font-size: 30px;
     line-height: 36px;
     text-transform: uppercase;
-    color: #000000;
-    margin: 0 0 64px 0;
+    color: #000;
+    margin: 0 0 64px;
 }
 
 .modal-content-name {
@@ -401,7 +420,7 @@ body {
     text-transform: capitalize;
     font-weight: 700;
     font-size: 20px;
-    color: #000000;
+    color: #000;
 }
 
 .modal-content-warn {
@@ -537,13 +556,21 @@ body {
 
 .button-minus:hover path,
 .button-plus:hover path {
-    fill: #000000;
+    fill: #000;
     fill-opacity: 1;
+}
+
+.button-minus:focus svg,
+.button-plus:focus svg {
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    border: 3px solid #82B3D3;
 }
 
 .button-minus:active path,
 .button-plus:active path {
-    fill: #000000;
+    fill: #000;
     fill-opacity: 0.2;
 }
 
@@ -564,16 +591,16 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    color: #FFFFFF;
+    color: #FFF;
     padding: 19px 22px 22px;
     border-radius: 10px;
     background-color: #333;
-    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
+    box-shadow: 0 15px 30px 0 rgb(0 0 0 / 30%);
     width: 256px;
     transform: translateX(-45%) translateY(10%);
 }
 
-.tooltip-text:after {
+.tooltip-text::after {
     content: '';
     background-image: url('../img/icons/triangle.svg');
     width: 19px;
@@ -595,7 +622,6 @@ body {
 .tooltip-toggle:hover + span.tooltip-text,
 .tooltip-toggle:focus + span.tooltip-text {
     display: block;
-    transition: 0.3s;
 }
 
 .button-modal-content {
@@ -612,6 +638,10 @@ body {
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+    appearance: none;
     margin: 0;
+}
+
+input[type='number'] {
+    appearance: textfield;
 }
