--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,12 @@
 
-
 .hero {
     background: url("../img/images/main-page-background.jpg");
+    background-color: #0c4368;
     padding-top: 51px;
 }
 
 .welcome-img {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     margin: 0 auto;
     margin-bottom: 25px;
@@ -15,24 +14,20 @@
 
 .divider {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .about-sedona {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #000000;
-    background-color: #FFFFFF;
-    padding: 69px 0 90px 0;
+    color: #000;
+    background-color: #FFF;
+    padding: 69px 0 90px;
 }
 
 .about-sedona h2, .about-sedona p {
@@ -51,10 +46,8 @@
 
 .advantage {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .advantage-h3 {
@@ -74,16 +67,16 @@
 
 .advantage-item {
     width: 400px;
-    height: 385px;
-    padding: 112px 85px;
+    min-height: 385px;
+    padding: 115px 85px 90px;
     text-align: center;
     background-color: #83B3D31F;
 }
 
 .advantage-item:first-child,
 .advantage-item:nth-child(7) {
-    color: #FFFFFF;
-    padding: 102px 85px;
+    color: #FFF;
+    padding: 104px 85px 80px 80px;
     background-color: #82B3D3;
     text-align: center;
 }
@@ -127,6 +120,7 @@
 }
 
 .slogan {
+    width: 1200px;
     padding: 64px 347px;
     text-align: center;
 }
@@ -138,10 +132,8 @@
 
 .advantage-list {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     list-style: none;
     padding-left: 0;
     margin: 0;
@@ -175,7 +167,7 @@
 }
 
 .advantage-list-item:nth-child(2) {
-    background-color: #FFFFFF;
+    background-color: #FFF;
 }
 
 .hotel-search {
@@ -188,7 +180,7 @@
     font-weight: 400;
     font-size: 22px;
     line-height: 26px;
-    color: #333333;
+    color: #333;
 }
 
 .hotel-search-h2 {
@@ -198,11 +190,11 @@
     font-size: 30px;
     line-height: 36px;
     text-transform: uppercase;
-    color: #000000;
+    color: #000;
 }
 
-.hotel-search a {
-    font-family: 'PT Sans';
+.hotel-search button {
+    font-family: inherit;
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 700;
@@ -211,14 +203,16 @@
     display: inline-block;
     padding: 8px 50px;
     border-radius: 4px;
+    border: none;
 }
 
 .subscribe {
     width: 1200px;
     height: 414.86px;
     background-image: url("../img/images/main-subscribe.jpg");
+    background-color: #0c4368;
 }
 
 .subscribe-h2 {
-    color:#FFFFFF;
+    color:#FFF;
 }
